# musicbrainz_db_lite

./: .env  .gitignore  Cargo.toml  README.md  schema.sql
.sqlx/: query-01407e9d2e607732774895d12e7e56c74fc46a39743ce9e5e2cb92c9830667db.json  query-0714a08c96cf6b14d440dc9630dff1b6cc8233620c1c952fc5c59dd9126f519e.json  query-104e7667aa6a25fd704f346a40d961408341d5bc6abe7234775691f03d1ceaea.json  query-19eb68d48e60a3d713c0f90afc239670be75e054f8f33c6f223a2d877e039e1b.json  query-1e7e744c1e5f2833313ff2a9a1f75c5231b5de22169d7d7390225fadeee926ec.json  query-222f7087f9acd8b148c98c10b23a52516830d690fd53c9b4edb985612608d157.json  query-2650dc755a35a5e4da87e72f6065978efb2096a7ce39304bac7f49c63959c560.json  query-32b29f625206a70ac53a2efb5cf9836b08269a4e7d4b73ae416208820f2810a6.json  query-38e1f7f6a812ac757b4436ac9871c6cec9998f8bfd55f31c0922323c60a26351.json  query-38f94ebe6204cbc39ad6941033f068addca36f2c2d4a71692b0870dc28f17fbe.json  query-50c3da82f100ff0d23ba2284c2ad07eb432ab6d705b40dde3467fa565399c4d3.json  query-592c0aebbeb65514d603d9041f53443ccb4351cd360f00da3fd3dcb5d974d943.json  query-59a42d4d4cfabb67216d1297604c4b4025c3bf4204ff902e9b168bba13d61ead.json  query-5b0f33d02209f9668f95a89b060164e74e4aefcfdf75e7bc9b288613cf1a4fec.json  query-5b4b7cd35a4fdd0fd3cf5ebe6b7988d38e4cac175c5baaafcaf5339d3118c55e.json  query-5c6a5ab93cfc5978549675d8013b91664ccde7f9f2f4ced112584d34dc02a266.json  query-64ad5b11d8336bee67df520c07982f8e5cdf4a11ab1ef4f834c3c10562c6e7b6.json  query-662f479092f888d1d5bca95399ed9fcf2359508556a4d88b0dedac6049d89e87.json  query-66417af3fc6382d9be37a40be8fd499b74155006afefa219f279f1d5b0b18045.json  query-66567fc16d17c505190eeffb4c763a54d7a89c6a320ec4f41f17b7141a79886d.json  query-6d5c0938640f8e64147f046284d3d13959630144ad0fc5a56c5fec9a281a3ac5.json  query-77693589260490ac8a6d578c18b09fe64b1de269a9c311ee6bf9cdfdbe887c13.json  query-7b03d8f3bc08c3754bf4c28bca7aadbb887dc590bb064629adfd7da7f88232e6.json  query-7d1ebad2fbb9dbe7126a0307e9bcdf1a54a153e9284c9c4ec51d994265585319.json  query-7d38366e0fa54d2e626ebe1329ead8d2da50bc3a280adb3a2edd6a74a980a7c1.json  query-8262fb860f662f575eb365badaf8316478838df837ee6624f64861cbba3241b4.json  query-84f7e013950609675a6ad99ba24b8cbc291ef16c882a7c1f9d6114dd94c94b18.json  query-8e478ab901035049fb8c540e9bf399ee734ad04929a41405dfbd3239d01f7560.json  query-9a2fa42ac04ace1f6e6e257c4d43bb378776d2a73dd88cf0f89a8f823447383e.json  query-a8e0a2b8bfc29f9ce68d347519f19d52c6e508297185bd69db008d41ee3b5001.json  query-aeddf4bd6b7190fa0aaff278bda0b20b179e461c4d6143794dc444bc8f4a0ded.json  query-bb34f03d65791b50cb8e9de788e64f8fd67272b21e79b778a46340651f01bf35.json  query-bd385e2844de0b26072e36f7b8288631d635d4878d19d7fe6030f4203ec35da4.json  (+9 more)
dev/: prepare_sqlx.sh  (+1 more)
musicbrainz_db_lite_macros/: Cargo.toml
musicbrainz_db_lite_macros/src/: database_atributes.rs  lib.rs  sql_gen.rs  utils.rs
musicbrainz_db_lite_macros/src/derives/: main_entity.rs  mod.rs
musicbrainz_db_lite_macros/src/derives/methods/: mod.rs  selects.rs  update_date.rs
musicbrainz_db_lite_schema/: Cargo.toml  generate.sh  schema.sql
musicbrainz_db_lite_schema/src/: lib.rs
musicbrainz_db_lite_schema/src/tables/: mod.rs
musicbrainz_db_lite_schema/src/tables/listenbrainz/: listens.rs  mod.rs  msid_mapping.rs
musicbrainz_db_lite_schema/src/tables/musicbrainz/: artists.rs  label.rs  mod.rs  recordings.rs  relations.rs  releases.rs  work.rs
(+97 files in other folders)
