[package]
name = "musicbrainz-db-lite"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.82"
chrono = "0.4.38"
extend = "1.2.0"
futures = "0.3.30"
listenbrainz = "0.8.0"
macon = "1.1.0"
musicbrainz_rs_nova = "0.7.0"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
welds = { version = "0.4.0", features = [
    "sqlite",
    "detect",
    "check",
    "migrations",
] }


[features]
default = ["timeout_continue"]
timeout_continue = []

[dev-dependencies]
serial_test = "3.1.1"

[[test]]
name = "all"
path = "tests/tests.rs"
