[package]
name = "musicbrainz-db-lite"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
musicbrainz_db_lite_macros = { path = "./musicbrainz_db_lite_macros" }
musicbrainz_db_lite_schema = { path = "./musicbrainz_db_lite_schema" }

musicbrainz_rs_nova = { version = "0.8.0" }

async-stream = "0.3.5"
async-trait = "0.1.82"
chrono = "0.4.38"
const_format = "0.2.33"
extend = "1.2.0"
futures = "0.3.30"
listenbrainz = "0.8.0"
macon = "1.2.0"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite"] }
thiserror = "2.0.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
welds = { version = "0.4.5", features = [
    "sqlite",
    "detect",
    "check",
    "migrations",
] }
tracing = "0.1.40"
itertools = "0.13.0"
serde = "1.0.210"


[features]
default = ["timeout_continue"]
timeout_continue = []

[dev-dependencies]
serial_test = "3.1.1"
colog = "1.3.0"
log = "0.4.22"

[workspace]
default-members = [
    ".",
    "musicbrainz_db_lite_schema",
    "musicbrainz_db_lite_macros",
]
members = ["musicbrainz_db_lite_schema", "musicbrainz_db_lite_macros"]
