[package]
name = "musicbrainz_db_lite_macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "musicbrainz_db_lite_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros"] }
syn = "2.0.79"
