[package]
name = "musicbrainz_db_lite_schema"
version = "0.1.0"
edition = "2021"
description = "Schema generator for musicbrainz_db_lite"
rust-version = "1.75.0"

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
serial_test = "3.1.1"